--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -3,6 +3,8 @@
 @import generated/sprite-svg
 // @import lib/slick-theme
 @import lib/slick
+@import lib/magnific-popup
+@import lib/jquery.scrollbar
 @import common
 @import layouts
 @import main
