--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -8,12 +8,12 @@ header.header(role="banner")
 				span.nav-trigger
 			// start MAIN NAV
 			nav.nav-main(role="navigation")
-				a(href="#") О нас
-					a(href="#") Mice
-					a(href="#") Event
-					a(href="#") Новости
-					a(href="#") Портфолио
-					a(href="#")	Контакты
+				a.js-anchor(href="#features") О нас
+				a.js-anchor(href="#mice-department") Mice
+				a.js-anchor(href="#event-department") Event
+				a.js-anchor(href="#news") Новости
+				a.js-anchor(href="#projects") Портфолио
+				a.js-anchor(href="#contact") Контакты
 			// end MAIN NAV
 			
 			// start TOGGLE LANG
