--- a/src/templates/partials/_scripts.jade
+++ b/src/templates/partials/_scripts.jade
@@ -6,4 +6,6 @@ block scripts
 	script(type="text/javascript" src="js/lib/jquery.filterizr.min.js")
 	script(type="text/javascript" src="js/lib/wow.min.js")
 	script(type="text/javascript" src="js/lib/slick.min.js")
+	script(type="text/javascript" src="js/lib/jquery.magnific-popup.min.js")
+	script(type="text/javascript" src="js/lib/jquery.scrollbar.min.js")
 	script(type="text/javascript" src="js/app.js")
