--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -1,5 +1,5 @@
 //BEGIN header
-header.header(role="banner")
+header.header.animated.fadeIn(role="banner")
 	.container
 		a.logo(href="#")
 			img(src="img/logo.svg" width="136" height="47")
