--- a/src/templates/partials/_scripts.jade
+++ b/src/templates/partials/_scripts.jade
@@ -8,4 +8,5 @@ block scripts
 	script(type="text/javascript" src="js/lib/slick.min.js")
 	script(type="text/javascript" src="js/lib/jquery.magnific-popup.min.js")
 	script(type="text/javascript" src="js/lib/jquery.scrollbar.min.js")
+	script(type="text/javascript" src="js/lib/jquery.animateNumber.min.js")
 	script(type="text/javascript" src="js/app.js")
