--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -2,6 +2,7 @@
 @import helpers/all
 @import generated/sprite-svg
 // @import lib/slick-theme
+@import lib/animate
 @import lib/slick
 @import lib/magnific-popup
 @import lib/jquery.scrollbar
